--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "node esbuild.config.js"
+    "build": "node config/esbuild.config.js",
+    "build-nui": "node config/nui.config.js"
   },
   "devDependencies": {
     "@citizenfx/client": "^2.0.6043-1",
