--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "esbuild-plugin-fileloc": "^0.0.6",
     "prisma": "^4.8.0",
     "ts-loader": "^9.4.1",
+    "tsc": "^2.0.4",
     "typescript": "^4.9.3"
   },
   "dependencies": {
