--- a/resources/example/src/server/tsconfig.json
+++ b/resources/example/src/server/tsconfig.json
@@ -4,12 +4,12 @@
     "outDir": "./",
     "sourceMap": true,
     "noImplicitAny": false,
-    "module": "commonjs",
-    "target": "es6",
+    "module": "ES2020",
+    "target": "ES2021",
     "allowJs": true,
-    "lib": ["es2021"],
+    "lib": ["ES2021"],
     "types": ["@citizenfx/server", "@types/node"],
-    "moduleResolution": "node",
+    "moduleResolution": "Node16",
     "paths": {
       "@common/*": ["../../../../common/*"],
     },
