--- a/tsconfig.client.json
+++ b/tsconfig.client.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "noImplicitAny": false,
-    "module": "ES2015",
-    "target": "es6",
+    "module": "ES2020",
+    "target": "ES2021",
     "allowJs": true,
-    "lib": ["es2021"],
+    "lib": ["ES2021"],
     "types": ["@citizenfx/client", "@types/node"],
     "moduleResolution": "node"
   },
